# renderer

./: CMakeLists.txt  LICENSE  README.md
assets/shaders/: fullscreen.frag.glsl  geometry.frag.glsl  geometry.vert.glsl  tracer.comp.glsl
include/: renderer.h
private/: app-create.cpp  app-destroy.cpp  camera.cpp  frame.cpp  geometry.cpp  material.cpp  renderer.cpp  shutdown.cpp
public/: renderer.h
source/: app-create.cpp  camera.h  material.cpp  render_component.cpp  renderer.cpp  startup.cpp  swapchain.cpp  util.cpp  vk.h  window.cpp
